data/derived/fa15/progs/unify/prog4111.ml.out
Characters 127-129:
  | Sine e'                -> sin(pi * eval(e'))
                                  ^^
Error: This expression has type float but an expression was expected of type
         int
